Sincronização dos projetos e parte da implementação da filial.