@@ -7,7 +7,10 @@ import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
 import javafx.scene.control.TextField;
 
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.net.URL;
 import java.util.ResourceBundle;
 
@@ -17,13 +20,28 @@ import java.util.ResourceBundle;
 public class FilialMakerMainWindow extends Controller implements Initializable {
 
     @FXML
+    private TextField local;
+
+    @FXML
     private TextField nome;
 
     @FXML
     private TextField porta;
 
     @FXML
+    public void selecionarExecutavel(ActionEvent event){
+        String src = WindowLoader.obterArquivo(null, System.getProperty("user.dir"));
+
+        if(src != null){
+            this.local.setText(src);
+            this.local.setDisable(false);
+        }
+
+    }
+
+    @FXML
     public void criar(ActionEvent event){
+
         Integer porta = null;
 
         try {
@@ -34,18 +52,40 @@ public class FilialMakerMainWindow extends Controller implements Initializable {
             porta = null;
         }
 
-        if(this.nome.getText().length() > 0 && porta != null){
+        if(this.nome.getText().length() > 0 && porta != null && this.local.getText().length() > 0){
             //Inicia a filial
             try {
-                //Process novaFilial = new ProcessBuilder("java -jar " + System.getProperty("user.dir") + "\\Interpretador.jar " + nome + " " + porta).start();
-                Runtime.getRuntime().exec("java -jar " + System.getProperty("user.dir") + "\\Interpretador.jar " + nome + " " + porta);
+                Process processo = Runtime.getRuntime().exec("java -jar " + this.local.getText() + " " + nome.getText() + " localhost " + porta);
+                BufferedReader processOutput = new BufferedReader(new InputStreamReader(processo.getInputStream()));
 
-                System.out.println(System.getProperty("user.dir"));
+                Thread printResult = new Thread(() -> {
+                    String nome = "Filial - " + this.nome.getText() + ": ";
+                    while(true){
+                        try {
+                            String out = processOutput.readLine();
+                            if(out != null){
+                                System.out.println(nome + out);
+                            }
+                            else{
+                                break;
+                            }
+                        } catch (IOException e) {
+                            e.printStackTrace();
+                        }
+
+                    }
+                });
+                printResult.start();
+
+                System.out.println(this.local.getText());
             }
             catch (IOException e) {
                 e.printStackTrace();
             }
             this.limpar();
+        }
+        else{
+            WindowLoader.showError("Dados Inválidos", "Preencha todos os campos corretamente.");
         }
     }
 
@@ -57,10 +97,12 @@ public class FilialMakerMainWindow extends Controller implements Initializable {
     public void limpar(){
         this.porta.setText("");
         this.nome.setText("");
+        //this.local.setText("");
+        //this.local.setDisable(true);
     }
 
     @Override
     public void initialize(URL location, ResourceBundle resources) {
-
+        this.local.setDisable(true);
     }
 }
